--- a/TW101.html
+++ b/TW101.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size"12">Tablet<font></h1>
+<h1 style="color:#4fff33;" align="center";><font size"12"><h1>Tablet</h1><font></h1>
 
 <div id="nav">
 	<div id="nav_wrapper">
