--- a/Dell XPS 13.html
+++ b/Dell XPS 13.html
@@ -114,7 +114,7 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">Dell XPS 13</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">2.3GHz Intel Core i5-6200U (dual-core</font><br/>
+<h1 style="color:#4fff33;" align="center";><font size="6">2.3GHz Intel Core i5-6200U-dual-core</font><br/>
 Memory:8GB LPDDR3 <br/>
 Flash memory:1TB<br/>
 Height: 11.97 <br/>
