--- a/Panasonic DX802.html
+++ b/Panasonic DX802.html
@@ -120,7 +120,7 @@ Awesome sound bar<br/>
 Not as bright as HDR rivals<br/>
 Native contrast isn't the best<br/>
 </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
