--- a/Coming soon.html
+++ b/Coming soon.html
@@ -115,7 +115,7 @@
 <h1 style="color:#4fff33;" align="center";><font size="10">Robots</font></h1>
 <h1 style="color:#4fff33;" align="center";><font size="6">I promise you robots</font><br/>
  </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
