--- a/Dell XPS 13.html
+++ b/Dell XPS 13.html
@@ -126,7 +126,7 @@ Resolution:3,200 x 1,800 <br/>
 WLAN:DW1820A 2x2 802.11ac 2.4/5GHz<br/>
 Bluetooth: Bluetooth 4.1 wireless technology<br/>
 Operating system:Windows 10 (64-Bit) </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
