--- a/HTC 10.html
+++ b/HTC 10.html
@@ -130,7 +130,7 @@ Video: 2160p 30fps, 720p 120fps<br/>
 WLAN:Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, DLNA, hotspot<br/>
 Bluetooth:v4.2, A2DP, aptX <br/>
 GPS: A-GPS, GLONASS/ BDS </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
