--- a/IpadPro(9.7').html
+++ b/IpadPro(9.7').html
@@ -134,7 +134,7 @@
  Cellular:2x2 802.11a/b/g/n/ac + BT 4.2, Apple Lightning<br/>
  SIM:Optional NanoSIM<br/>
  Current Price:32 GB: 599 128 GB: 749 256 GB: 899</h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
