--- a/KS7000.html
+++ b/KS7000.html
@@ -120,7 +120,7 @@ Great ultra bright picture quality<br/>
 Has some backlighting clouding issues<br/>
 Is large<br/>
 </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
