--- a/Lenovo Yoga Tab 3 Pro.html
+++ b/Lenovo Yoga Tab 3 Pro.html
@@ -130,7 +130,7 @@ Height:9.72<br/>
 Length:7.05<br/>
 Height: 0.18 inches<br/>
 </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
