--- a/Macbook 2016.html
+++ b/Macbook 2016.html
@@ -130,7 +130,7 @@ Resolution:2304-by-1440 resolution at 226 pixels<br/>
 WLAN:802.11ac Wi-Fi wireless networking; IEEE 802.11a/b/g/n compatible<br/>
 Bluetooth: Bluetooth 4.0 wireless technology<br/>
 Operating system:macOS Sierra </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
