--- a/Nvidia shield K1 Tablet.html
+++ b/Nvidia shield K1 Tablet.html
@@ -132,7 +132,7 @@ Sensor: Accelerometer, gyro, compass<br/>
 Battery: 5200 mAh battery<br/>
 Color:Black<br/>
 </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
