--- a/Razer Blade Stealth 4K.html
+++ b/Razer Blade Stealth 4K.html
@@ -131,7 +131,7 @@ WLAN:Killer Wireless-AC (802.11a/b/g/n/ac <br/>
 Bluetooth: Bluetooth 4.1 wireless technology<br/>
 Operating system:Windows 10 (64-Bit) </h1>
 
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
