--- a/HTC 10.html
+++ b/HTC 10.html
@@ -41,20 +41,31 @@
 	<TR>
 		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
 		<ul>
+
 		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
 		<li><a href="TW101.html"><h3>TW101</h3></a></li>
 		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
 		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
 		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
+		
 		</ul></li></TD><TD width="200"><li>
 		<a href="#"><h1>Phones</h1></a>
 		<ul>
-		<li><a href="Galaxy S7.html"><h3>Galaxy S7</h3></a></li>
+		<table width="250">
+		<tbody>
+		<tr>
+		<td width="125">
+		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li>
+		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
+		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
+		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
 		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5.html"><h3>LG Nexus 5</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
+		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
+		</ul></li></TD></tr>
+		</tbody>
+		</table>
+		<TD width="200"><li>
 		<a href="#"><h1>TVs</h1></a>
 		<ul>
 		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
@@ -115,20 +126,34 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">HTC 10</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Height:145.9</font><br/>
-Legnth:71.9mm<br/>
-SIM: Nano-SIM<br/>
-Size: 5.2 inches ~71.1 percent screen-to-body ratio<br/>
-Resolution:  1440 x 2560 pixels ~565 ppi pixel density<br/>
-Protection:Corning Gorilla Glass 3 <br/>
-Operating System:  Android OS, v6.0.1 <br/>
-Processor: Quad-core  <br/>
-Camera: 12 MP, f/1.8, 26mm<br/>
-Video: 2160p 30fps, 720p 120fps<br/>
-3.5mm jack   <br/>
-WLAN:Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, DLNA, hotspot<br/>
-Bluetooth:v4.2, A2DP, aptX <br/>
-GPS: A-GPS, GLONASS/ BDS </h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height:145.9mm </font><br/>
+Legnth:71.9<br/>
+Weight: 161 g<br/>
+SIM: No<br/>
+Size: 71.13 % Screen to body ratio<br/>
+Resolution: 1440 x 2560 pixels <br/>
+Protection: Corning Gorilla Glass 4 <br/>
+Operating System: Android 6.0<br/>
+Processor: Qualcomm Snapdragon 820 MSM8996 <br/>
+CPU: Quad-core, 2200 MHz, Kryo, 64-bit<br/>
+RAM: 4 GB RAM<br/>
+Storage:64 GB <br/>
+Battery:  3000 mAh<br/>
+Rear camera:  12 megapixels <br/>
+Front camera: 5 megapixels<br/>
+Video: 3840x2160 (4K), 1280x720 (720p HD) (120 fps) *Very fancy*<br/>
+Jack:Yes<br/>
+WLAN: 802.11 a, b, g, n, ac, dual-band<br/>
+Bluetooth: 4.2<br/>
+GPS:  GPS, A-GPS, Glonass, BeiDou<br/>
+NFC: Yes<br/>
+Radio: FM<br/>
+Compass: Yes<br/>
+Proximity sensor: Yes<br/>
+Accelerometer: Yes<br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor:Yes</h1>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
