--- a/OnePlus 3.html
+++ b/OnePlus 3.html
@@ -41,20 +41,31 @@
 	<TR>
 		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
 		<ul>
+
 		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
 		<li><a href="TW101.html"><h3>TW101</h3></a></li>
 		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
 		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
 		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
+		
 		</ul></li></TD><TD width="200"><li>
 		<a href="#"><h1>Phones</h1></a>
 		<ul>
-		<li><a href="Galaxy S7.html"><h3>Galaxy S7</h3></a></li>
+		<table width="250">
+		<tbody>
+		<tr>
+		<td width="125">
+		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li>
+		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
+		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
+		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
 		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5.html"><h3>LG Nexus 5</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
+		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
+		</ul></li></TD></tr>
+		</tbody>
+		</table>
+		<TD width="200"><li>
 		<a href="#"><h1>TVs</h1></a>
 		<ul>
 		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
@@ -114,20 +125,34 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">OnePlus 3</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Height: 152.7mm</font><br/>
-Legnth:74.7mm<br/>
-SIM: Dual SIM (Nano-SIM, dual stand-by)<br/>
-Size: 5.5 inches ~73.1% screen-to-body ratio<br/>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 152.7</font><br/>
+Legnth:74.7<br/>
+Weight:158 g<br/>
+SIM: Dual nano <br/>
+Size:73.15 %Screen to body<br/>
 Resolution: 1080 x 1920 pixels <br/>
-Protection:Corning Gorilla Glass <br/>
-Operating System: Android OS, v6.0.1 <br/>
-Processor: Quad-core <br/>
-Camera: 16 MP, f/2.0,<br/>
-Video: 2160p@30fps, 720p@120fps<br/>
-3.5mm jack  <br/>
-WLAN:Wi-Fi 802.11 a/b/g/n/ac, Wi-Fi Direct, DLNA, hotspot<br/>
-Bluetooth:v4.2, A2DP, LE<br/>
-GPS:Yes, with A-GPS, GLONASS, BDS</h1>
+Protection: Scratch-resistant glass (Corning Gorilla Glass 4), Light sensor, Proximity sensor <br/>
+Operating System:Android 6 <br/>
+Processor: Qualcomm Snapdragon 820 MSM8996 <br/>
+CPU: Quad-core, 2200 MHz, Kryo, 64-bit<br/>
+RAM:6 GB RAM<br/>
+Storage: 64 GB<br/>
+Battery:3000 mAh <br/>
+Rear camera:  16 megapixels <br/>
+Front camera: 8 megapixels<br/>
+Video: 3840x2160 (4K) (30 fps), 1280x720 (720p HD) (120 fps)<br/>
+Jack: Yes<br/>
+WLAN: Wi-Fi 802.11 a/b/g/n/ac, Wi-Fi Direct, DLNA, hotspot<br/>
+Bluetooth: v4.2, A2DP, LE<br/>
+GPS: Yes, with A-GPS, GLONASS, BDS<br/>
+NFC: Yes<br/>
+Radio: No<br/>
+Compass: Yes<br/>
+Proximity sensor:Yes <br/>
+Accelerometer: Yes<br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor: Yes</h1>
 
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
