--- a/Galaxy S7 edge.html
+++ b/Galaxy S7 edge.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Laptops</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
 
 <div id="nav">
 	<div id="nav_wrapper">
@@ -124,21 +124,35 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Samsung Notebook 9</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Processor:6th Generation Intel Core i7 Processor</font><br/>
-Memory:8GB<br/>
-Flash memory:256GB<br/>
-Height: 13.64 <br/>
- Width: 9.33 inches <br/>
-Weight: 1.85 pounds<br/>
-Graphics: Intel HD Graphics 520 <br/>
-Audio: Sterio
- <br/>
-Battery:4 hours and 20 minutes <br/>
-Resolution:1,920 x 1,080 <br/>
-WLAN:802.11ac Wi-Fi<br/>
-Bluetooth: Bluetooth 4.1 wireless technology<br/>
-Operating system:Windows 10 (64-Bit) </h1>
+<h1 style="color:#4fff33;" align="center";><font size="10"></font>Galaxy S7 Edge</h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 150.9mm </font><br/>
+Legnth: 72.6<br/>
+Weight: 157 g<br/>
+SIM: Yes<br/>
+Size:76.09 %<br/>
+Resolution: 1440 x 2560 pixels <br/>
+Protection: Gorilla Glass 4 <br/>
+Operating System: Android 6.0<br/>
+Processor: Samsung Exynos 8 Octa 8890 <br/>
+CPU: Octa-core, 2300 MHz, Exynos M1 and ARM Cortex-A53 , 64-bit<br/>
+RAM:4 GB RAM<br/>
+Storage:32 GB <br/>
+Battery: 3600 mAh<br/>
+Rear camera:  12MP <br/>
+Front camera:  5MP <br/>
+Video: 3840x2160 (4K) (30 fps), 1920x1080 (1080p HD) (60 fps), 1280x720 (720p HD) (240 fps) <br/>
+Jack: Yes<br/>
+WLAN: 802.11 a, b, g, n, ac, dual-band, e <br/>
+Bluetooth: 4.2<br/>
+GPS: GPS, A-GPS, Glonass, BeiDou <br/>
+NFC: Yes<br/>
+Radio: FM<br/>
+Compass: Yes <br/>
+Proximity sensor: Yes<br/>
+Accelerometer Yes: <br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: Yes<br/>
+Finger print sensor: Yes</h1>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -150,6 +164,7 @@ Operating system:Windows 10 (64-Bit) </h1>
   ga('send', 'pageview');
 
 </script>
+
 
 </body>
 
