--- a/Iphone 7 plus.html
+++ b/Iphone 7 plus.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Laptops</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
 
 <div id="nav">
 	<div id="nav_wrapper">
@@ -98,6 +98,7 @@
 </div>
 
 
+
 <HR COLOR="#4fff33" WIDTH="100%">
 
 
@@ -124,21 +125,36 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Samsung Notebook 9</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Processor:6th Generation Intel Core i7 Processor</font><br/>
-Memory:8GB<br/>
-Flash memory:256GB<br/>
-Height: 13.64 <br/>
- Width: 9.33 inches <br/>
-Weight: 1.85 pounds<br/>
-Graphics: Intel HD Graphics 520 <br/>
-Audio: Sterio
- <br/>
-Battery:4 hours and 20 minutes <br/>
-Resolution:1,920 x 1,080 <br/>
-WLAN:802.11ac Wi-Fi<br/>
-Bluetooth: Bluetooth 4.1 wireless technology<br/>
-Operating system:Windows 10 (64-Bit) </h1>
+<h1 style="color:#4fff33;" align="center";><font size="10">Iphone 7 plus</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 158.2mm</font><br/>
+Legnth:77.9mm<br/>
+Weight:188g<br/>
+SIM: No<br/>
+Size:67.7% screen-to-body ratio<br/>
+Resolution: 1920-by-1080-pixel  <br/>
+Protection: Ion-strengthened glass, oleophobic coating <br/>
+Operating System: IOS 10<br/>
+Processor: Apple A10 Fusion <br/>
+CPU: Quad-core, 2340 MHz, 64-bit<br/>
+RAM: 3 GB RAM<br/>
+Storage: 32, 128, &256 MB<br/>
+Battery: 2900 mAh<br/>
+Rear camera:  12 MP <br/>
+Front camera: 7 MP<br/>
+Video: 3840x2160 (4K) (30 fps), 1920x1080 (1080p HD) (120 fps), 1280x720 (720p HD) (240 fps)<br/>
+Jack: None br/>
+WLAN: 802.11 a, b, g, n, ac, dual-band<br/>
+Bluetooth: 4.2<br/>
+GPS:  GPS, A-GPS, Glonass, Cell ID, Wi-Fi positioning<br/>
+NFC: Yes<br/>
+Radio: No<br/>
+Compass: Yes <br/>
+Proximity sensor: Yes<br/>
+Accelerometer: Yes<br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor: Yes</h1>
+
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
