--- a/Iphone 7.html
+++ b/Iphone 7.html
@@ -41,20 +41,31 @@
 	<TR>
 		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
 		<ul>
+
 		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
 		<li><a href="TW101.html"><h3>TW101</h3></a></li>
 		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
 		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
 		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
+		
 		</ul></li></TD><TD width="200"><li>
 		<a href="#"><h1>Phones</h1></a>
 		<ul>
-		<li><a href="Galaxy S7.html"><h3>Galaxy S7</h3></a></li>
+		<table width="250">
+		<tbody>
+		<tr>
+		<td width="125">
+		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li>
+		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
+		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
+		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
 		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5.html"><h3>LG Nexus 5</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
+		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
+		</ul></li></TD></tr>
+		</tbody>
+		</table>
+		<TD width="200"><li>
 		<a href="#"><h1>TVs</h1></a>
 		<ul>
 		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
@@ -115,20 +126,36 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">Iphone 7</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Height:138.3</font><br/>
-Legnth:67.1mm<br/>
-SIM: Nano-SIM<br/>
-Size: 4.7 inches ~65.6% screen-to-body ratio<br/>
-Resolution:  750 x 1334 pixels ~326 ppi pixel density <br/>
-Protection:Ion-strengthened glass, oleophobic coating <br/>
-Operating System:  iOS 10.0.1, upgradable to iOS 10.1 <br/>
-Processor: Quad-core <br/>
-Camera: 12 MP, f/1.8, 28mm<br/>
-Video: 2160p@30fps, 1080p@30/60/120fps, 720p@240fps,<br/>
-No jack..so to speak  <br/>
-WLAN:Wi-Fi 802.11 a/b/g/n/ac, dual-band, hotspot<br/>
-Bluetooth: v4.2, A2DP, LE <br/>
-GPS:Y A-GPS, GLONASS</h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 138.3mm</font><br/>
+Legnth: 67.1mm<br/>
+Weight: 138 grams<br/>
+SIM: Nano-sim<br/>
+Size:65.6% screen-to-body ratio<br/>
+Resolution: 1334-by-750-pixel  <br/>
+Protection: Ion-strengthened glass, oleophobic coating <br/>
+Operating System: IOS 10<br/>
+Processor: Apple A10 Fusion <br/>
+CPU:Quad-core<br/>
+RAM: 2 GB<br/>
+Storage: 32, 128, &256 MB<br/>
+Battery: 1,960 mAh<br/>
+Rear camera: 12 mp  <br/>
+Front camera: 7 MP<br/>
+Video: 2160p@30fps, 1080p@30/60/120fps, 720p@240fps<br/>
+Jack: None<br/>
+WLAN: Wi-Fi 802.11 a/b/g/n/ac, dual-band, hotspot<br/>
+Bluetooth: 4.2, A2DP, LE<br/>
+GPS:  A-GPS, GLONASS<br/>
+NFC: Yes<br/>
+Radio: No<br/>
+Compass:  Yes<br/>
+Proximity sensor:Yes <br/>
+Accelerometer: Yes<br/>
+Ambient light sensor:  Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor: No</h1>
+
+
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
