--- a/LG Nexus 5X.html
+++ b/LG Nexus 5X.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Laptops</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
 
 <div id="nav">
 	<div id="nav_wrapper">
@@ -98,6 +98,7 @@
 </div>
 
 
+
 <HR COLOR="#4fff33" WIDTH="100%">
 
 
@@ -124,21 +125,35 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Samsung Notebook 9</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Processor:6th Generation Intel Core i7 Processor</font><br/>
-Memory:8GB<br/>
-Flash memory:256GB<br/>
-Height: 13.64 <br/>
- Width: 9.33 inches <br/>
-Weight: 1.85 pounds<br/>
-Graphics: Intel HD Graphics 520 <br/>
-Audio: Sterio
- <br/>
-Battery:4 hours and 20 minutes <br/>
-Resolution:1,920 x 1,080 <br/>
-WLAN:802.11ac Wi-Fi<br/>
-Bluetooth: Bluetooth 4.1 wireless technology<br/>
-Operating system:Windows 10 (64-Bit) </h1>
+<h1 style="color:#4fff33;" align="center";><font size="10">LG Nexus 5X</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 147mm</font><br/>
+Legnth:72.6<br/>
+Weight:136 g<br/>
+SIM: Nano<br/>
+Size: 70.04 %<br/>
+Resolution:  1080 x 1920 pixels<br/>
+Protection: Oleophobic coating, Scratch-resistant glass (Corning Gorilla Glass 3), Light sensor, Proximity sensor <br/>
+Operating System: Android 7<br/>
+Processor: Qualcomm Snapdragon 808 MSM8992 <br/>
+CPU: Hexa-core, 1800 MHz, ARM Cortex-A57 and ARM Cortex-A53, 64-bit<br/>
+RAM: 2 GB RAM<br/>
+Storage: 32 GB<br/>
+Battery:  2700 mAh<br/>
+Rear camera:  12.3 megapixels <br/>
+Front camera: 5 megapixels<br/>
+Video:3840x2160 (4K) (30 fps), 1920x1080 (1080p HD), 1280x720 (720p HD) (120 fps)<br/>
+Jack: Yes br/>
+WLAN:Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, DLNA, hotspot <br/>
+Bluetooth:4.2 <br/>
+GPS:  GPS, A-GPS, Glonass<br/>
+NFC: Yes<br/>
+Radio: Np<br/>
+Compass: Yes<br/>
+Proximity sensor: Yes<br/>
+Accelerometer: Yes<br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor: Yes</h1>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
