--- a/Macbook 2016.html
+++ b/Macbook 2016.html
@@ -41,20 +41,31 @@
 	<TR>
 		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
 		<ul>
+
 		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
 		<li><a href="TW101.html"><h3>TW101</h3></a></li>
 		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
 		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
 		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
+		
 		</ul></li></TD><TD width="200"><li>
 		<a href="#"><h1>Phones</h1></a>
 		<ul>
-		<li><a href="Galaxy S7.html"><h3>Galaxy S7</h3></a></li>
+		<table width="250">
+		<tbody>
+		<tr>
+		<td width="125">
+		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li>
+		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
+		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
+		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
 		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5.html"><h3>LG Nexus 5</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
+		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
+		</ul></li></TD></tr>
+		</tbody>
+		</table>
+		<TD width="200"><li>
 		<a href="#"><h1>TVs</h1></a>
 		<ul>
 		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
