--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -31,7 +31,79 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Laptops</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phone Graphs</font></h1>
+
+<div id="nav">
+	<div id="nav_wrapper">
+	<ul>
+	<TABLE width="1000">
+	<TBODY>
+	<TR>
+		<TD width="200"><li><a href="height.html"><h1>Height</h1></a>
+		</li></TD><TD width="200"><li>
+		<a href="Legnth.html"><h1>Legnth</h1></a>
+		</li></TD>
+		<TD width="200"><li>
+		<a href="Weight.html"><h1>Weight</h1></a>
+		</li></TD><TD width="200"><li>
+		<a href="Ratio.html"><h1>Screen/Body<br/>Ratio</h1></a>
+		</li></TD>
+		<TD width="200"><li>
+		<a href="Resolution.html"><h1>Resolution</h1></a>
+		</li></TD>
+		
+		
+		</TR></TBODY></TABLE>
+		<TABLE width="1000">
+	<TBODY>
+	<TR>
+		<TD width="200"><li><a href="Ram.html"><h1>Ram</h1></a>
+		</li></TD><TD width="200"><li>
+		<a href="Storage.html"><h1>Storage</h1></a>
+		</li></TD>
+		<TD width="200"><li>
+		<a href="Battery.html"><h1>Battery</h1></a>
+		</li></TD><TD width="200"><li>
+		<a href="Rear camera.html"><h1>Rear camera</h1></a>
+		</li></TD>
+		<TD width="200"><li>
+		<a href="Front camera.html"><h1>Front camera</h1></a>
+		</li></TD>
+		
+		
+		</TR></TBODY></TABLE>
+		
+	</ul>
+
+</div>
+</div>
+
+
+<HR COLOR="#4fff33" WIDTH="100%">
+
+
+
+
+
+
+
+
+
+
+
+<HR COLOR="#4fff33" WIDTH="60%">
+
+
+
+
+
+
+
+
+
+
+
+<HR COLOR="#4fff33" WIDTH="100%">
 
 <div id="nav">
 	<div id="nav_wrapper">
@@ -96,49 +168,6 @@
 
 </div>
 </div>
-
-
-<HR COLOR="#4fff33" WIDTH="100%">
-
-
-
-
-
-
-
-
-
-
-
-<HR COLOR="#4fff33" WIDTH="60%">
-
-
-
-
-
-
-
-
-
-
-
-<HR COLOR="#4fff33" WIDTH="100%">
-
-<h1 style="color:#4fff33;" align="center";><font size="10">Samsung Notebook 9</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Processor:6th Generation Intel Core i7 Processor</font><br/>
-Memory:8GB<br/>
-Flash memory:256GB<br/>
-Height: 13.64 <br/>
- Width: 9.33 inches <br/>
-Weight: 1.85 pounds<br/>
-Graphics: Intel HD Graphics 520 <br/>
-Audio: Sterio
- <br/>
-Battery:4 hours and 20 minutes <br/>
-Resolution:1,920 x 1,080 <br/>
-WLAN:802.11ac Wi-Fi<br/>
-Bluetooth: Bluetooth 4.1 wireless technology<br/>
-Operating system:Windows 10 (64-Bit) </h1>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
