--- a/Pixel XL.html
+++ b/Pixel XL.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Laptops</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
 
 <div id="nav">
 	<div id="nav_wrapper">
@@ -98,6 +98,7 @@
 </div>
 
 
+
 <HR COLOR="#4fff33" WIDTH="100%">
 
 
@@ -124,21 +125,36 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Samsung Notebook 9</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Processor:6th Generation Intel Core i7 Processor</font><br/>
-Memory:8GB<br/>
-Flash memory:256GB<br/>
-Height: 13.64 <br/>
- Width: 9.33 inches <br/>
-Weight: 1.85 pounds<br/>
-Graphics: Intel HD Graphics 520 <br/>
-Audio: Sterio
- <br/>
-Battery:4 hours and 20 minutes <br/>
-Resolution:1,920 x 1,080 <br/>
-WLAN:802.11ac Wi-Fi<br/>
-Bluetooth: Bluetooth 4.1 wireless technology<br/>
-Operating system:Windows 10 (64-Bit) </h1>
+<h1 style="color:#4fff33;" align="center";><font size="10">Pixel XL</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height:154.72mm</font><br/>
+Legnth:75.74mm<br/>
+Weight:168g<br/>
+SIM: Nano-SIM(1)<br/>
+Size:71.2% screen-to-body ratio<br/>
+Resolution: 1440 pixels by 2560 pixels  <br/>
+Protection:Gorilla Glass 4<br/>
+Operating System:  Android 7.1  Nougat <br/>
+Processor: Qualcomms Snapdragon  <br/>
+CPU: Quad core 2 @ 1.6 GHz , 2@ 2.15 <br/>
+RAM:4 GB<br/>
+Storage: 32GB,& 128GB<br/>
+Battery: 3450 mAh<br/>
+Rear camera: 12.3MP  <br/>
+Front camera: 8 MP <br/>
+Video: 30fps - 2,160p<br/>
+Jack: 3.5mm <br/>
+WLAN: 802.11 g/n/ac<br/>
+Bluetooth: 4.2<br/>
+GPS:  Yes<br/>
+NFC: Yes<br/>
+Radio: No<br/>
+Compass: Yes<br/>
+Proximity sensor: Yes<br/>
+Accelerometer: Yes<br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: No<br/>
+Finger print sensor: Yes</h1>
+
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
