--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <tr> 
      <td bgcolor="#4fff33">
         <table border="0" cellpadding="5" cellspacing=".6">
-        <tr><td bgcolor="#000000"><h4 style="color:#4fff33;" align="center";><font size="6"><a href="phonegraphs.html" style="color:#4fff33">Phone spec<br/> graphs!</a></font></h4></td>
+        <tr><td bgcolor="#000000"><h4 style="color:#4fff33;" align="center";><font size="6"><a href="PhoneGraphs.html" style="color:#4fff33">Phone spec<br/> graphs!</a></font></h4></td>
         </tr></table></td>
     </tr>
 </table>
