--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -39,7 +39,7 @@
 	<TABLE width="1000">
 	<TBODY>
 	<TR>
-		<TD width="200"><li><a href="height.html"><h1>Height</h1></a>
+		<TD width="200"><li><a href="Height.html"><h1> Height</h1></a>
 		</li></TD><TD width="200"><li>
 		<a href="Legnth.html"><h1>Legnth</h1></a>
 		</li></TD>
