--- a/rear camera.html
+++ b/rear camera.html
@@ -63,7 +63,7 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">Rear camera</font></h1>
-<img src="Rear camera.jpeg" width="97%">
+<img src="rear camera.jpeg" width="97%">
 
 <div id="nav">
 	<div id="nav_wrapper">
