--- a/Height.html
+++ b/Height.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<<!Doctype html>
 
 
 
@@ -31,7 +31,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Height</font></h1>
 
 
 
@@ -63,8 +63,7 @@
 <HR COLOR="#4fff33" WIDTH="100%">
 
 <h1 style="color:#4fff33;" align="center";><font size="10">Height</font></h1>
- 
-<img src="01.jpg" width="97%">
+<img src="Height.jpg" width="97%">
 
 <div id="nav">
 	<div id="nav_wrapper">
