--- a/Ratio.html
+++ b/Ratio.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<h1 style="color:#4fff33;" align="center";><font size="12">Ratio</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="12">Phones</font></h1>
 
 
 
