--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -68,7 +68,7 @@
 		<a href="Front camera.html"><h1>Front camera</h1></a>
 		</li></TD>
 		<TD width="200"><li>
-		<a href="Rear camera.html"><h1>Rear camera</h1></a>
+		<a href="rear camera.html"><h1>Rear camera</h1></a>
 		</li></TD>
 		
 		
