--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -65,7 +65,7 @@
 		<a href="Battery.html"><h1>Battery</h1></a>
 		</li></TD>
 		<TD width="250"><li>
-		<a href="Front camera.html"><h1>Front camera</h1></a>
+		<a href="rear camera.html"><h1>Rear camera</h1></a>
 		</li></TD>
 		
 		</TR></TBODY></TABLE>
