--- a/Ratio.html
+++ b/Ratio.html
@@ -63,7 +63,7 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Weight</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="10">Ratio%</font></h1>
 <img src="Ratio.jpg" width="97%">
 
 <div id="nav">
