--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -124,7 +124,7 @@
 		<tbody>
 		<tr>
 		<td width="125">
-		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
+		<li><a href="Galaxy S7 Edg.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
 		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
 		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
