--- a/Iphone 7 plus.html
+++ b/Iphone 7 plus.html
@@ -127,7 +127,7 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Iphone 7 plus</font></h1>
+<h1 style="color:#4fff33;" align="center";><font size="10">Iphone 7 +</font></h1>
 <h1 style="color:#4fff33;" align="center";><font size="6">Height: 158.2mm</font><br/>
 Legnth:77.9mm<br/>
 Weight:188g<br/>
