--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <head>
 <link href="Styles.css"  type="text/css" rel="stylesheet" />
-
+<meta name="msvalidate.01" content="C88CF25EA29B9A732EAFD0E82D81D348" />
 </head>
 
 <body bgcolor="#000000">
