--- a/Dell XPS 13.html
+++ b/Dell XPS 13.html
@@ -139,6 +139,7 @@ Resolution:3,200 x 1,800 <br/>
 WLAN:DW1820A 2x2 802.11ac 2.4/5GHz<br/>
 Bluetooth: Bluetooth 4.1 wireless technology<br/>
 Operating system:Windows 10 (64-Bit) </h1>
+<h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -146,7 +147,7 @@ Operating system:Windows 10 (64-Bit) </h1>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86884490-1', 'auto');
+  ga('create', 'UA-86869458-2', 'auto');
   ga('send', 'pageview');
 
 </script>
