--- a/IpadPro(9.7').html
+++ b/IpadPro(9.7').html
@@ -147,6 +147,7 @@
  Cellular:2x2 802.11a/b/g/n/ac + BT 4.2, Apple Lightning<br/>
  SIM:Optional NanoSIM<br/>
  Current Price:32 GB: 599 128 GB: 749 256 GB: 899</h1>
+ <h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -154,7 +155,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86884490-1', 'auto');
+  ga('create', 'UA-86869458-2', 'auto');
   ga('send', 'pageview');
 
 </script>
