--- a/LG Nexus 5X.html
+++ b/LG Nexus 5X.html
@@ -156,6 +156,7 @@ Accelerometer: Yes<br/>
 Ambient light sensor: Yes<br/>
 Heart rate sensor: No<br/>
 Finger print sensor: Yes</h1>
+<h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -163,7 +164,7 @@ Finger print sensor: Yes</h1>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86884490-1', 'auto');
+  ga('create', 'UA-86869458-2', 'auto');
   ga('send', 'pageview');
 
 </script>
