--- a/Nvidia shield K1 Tablet.html
+++ b/Nvidia shield K1 Tablet.html
@@ -145,6 +145,7 @@ Sensor: Accelerometer, gyro, compass<br/>
 Battery: 5200 mAh battery<br/>
 Color:Black<br/>
 </h1>
+<h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -152,7 +153,7 @@ Color:Black<br/>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86884490-1', 'auto');
+  ga('create', 'UA-86869458-2', 'auto');
   ga('send', 'pageview');
 
 </script>
