--- a/Razer Blade Stealth 4K.html
+++ b/Razer Blade Stealth 4K.html
@@ -143,7 +143,7 @@ Resolution:4K (3840 x 2160) <br/>
 WLAN:Killer Wireless-AC (802.11a/b/g/n/ac <br/>
 Bluetooth: Bluetooth 4.1 wireless technology<br/>
 Operating system:Windows 10 (64-Bit) </h1>
-
+<h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -151,7 +151,7 @@ Operating system:Windows 10 (64-Bit) </h1>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86884490-1', 'auto');
+  ga('create', 'UA-86869458-2', 'auto');
   ga('send', 'pageview');
 
 </script>
