--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <head>
 <link href="Styles.css"  type="text/css" rel="stylesheet" />
 <meta name="msvalidate.01" content="C88CF25EA29B9A732EAFD0E82D81D348" />
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5661988434711820",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body bgcolor="#000000">
