--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ function closeNav() {
 	</a>
 	</td>
 	<td>
-	<a style="text-decoration:none; color: black;" href="Shadow Mare.html">
+	<a style="text-decoration:none; color: black;" href="Tablets.html">
 	<div id="mainwrapper"> 
 
 <!-- Image Caption 3 -->  
