--- a/Phones.html
+++ b/Phones.html
@@ -59,7 +59,7 @@ function closeNav() {
   <tbody align="center">
   <tr>
   <td>
- <a href="Contact.html">Home</a>
+ <a href="index.html">Home</a>
  </tr>
  </td>
  </tbody>/
