--- a/Laptops.html
+++ b/Laptops.html
@@ -55,7 +55,7 @@ function closeNav() {
   <tbody align="center">
   <tr>
   <td>
- <a href="Contact.html">Home</a>
+ <a href="index.html">Home</a>
  </tr>
  </td>
  </tbody>/
