--- a/LG V30 +.html
+++ b/LG V30 +.html
@@ -300,7 +300,7 @@ LTE, CDMA, GSM, UMTS </h4></td>
 <TABLE width="1200">
 <TBODY align="center">
 <TR>
- <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Front camera</h4></td>
+ <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Rear camera</h4></td>
 <td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>Dual 16 MP (f/1.6, OIS, 3-axis, laser & phase detection autofocus) + 13 MP (f/1.9, no AF)</h4></td>
 </tr>
 </tbody>
@@ -342,7 +342,7 @@ LTE, CDMA, GSM, UMTS </h4></td>
 <TABLE width="1200">
 <TBODY align="center">
 <TR>
- <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Rear camera </h4></td>
+ <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Front camera </h4></td>
 <td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>5 MP, f/2.2, 1/5" sensor size, 1.12 µm pixel size</h4></td>
 </tr>
 </tbody>
@@ -506,7 +506,7 @@ LTE, CDMA, GSM, UMTS </h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$849 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">https://www.uscellular.com/devices/phones/lg-v30-plus-black.html</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$849 <br/> <a style="text-decoration:none; color: Silver;" href="https://www.uscellular.com/devices/phones/lg-v30-plus-black.html">https://www.uscellular.com/devices/phones/lg-v30-plus-black.html</a> </h4></td>
 </tr>
 </tbody>
 </table>
