--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -148,12 +148,12 @@ function closeNav() {
 <TR width="100%">
  <td width="25%">
         <table border="0" cellpadding="5" cellspacing=".6">
-        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="PhoneFrontCamera.html" style="color:silver">Front<br/>Camera </a> </font></h4></td><hr align="right" height="10px" width="1px">
+        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="PhoneFrontCamera.html" style="color:silver">Rear<br/>Camera </a> </font></h4></td><hr align="right" height="10px" width="1px">
         </tr></table> </td>
  
  <td width="25%">
         <table border="0" cellpadding="5" cellspacing=".6">
-        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneRearCamera.html" style="color:silver"> Rear<br/>Camera</a></font></h4></td>
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneRearCamera.html" style="color:silver"> Front<br/>Camera</a></font></h4></td>
         </tr></table></td>
  <td width="25%">
         <table border="0" cellpadding="5" cellspacing=".6">
@@ -172,6 +172,21 @@ function closeNav() {
     border-width: 1px 0 0 0;
     border-radius: 45px;"
  size="1" align="left" width="100%" color="grey">
-
+<table align="center" border="0" cellspacing="4" cellpadding="2">
+<tr> 
+     <td bgcolor="silver">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td  bgcolor="#000000"><h4 style="color:#4fff33;" align="center";><font size="5"><a href="EbayPhoneGraphs.html" style="color:silver">Price <br/> on Ebay</a></font></h4></td>
+        </tr></table></td>
+    </tr>
+</table>
+<table align="center" border="0" cellspacing="4" cellpadding="2">
+<tr> 
+     <td bgcolor="silver">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td  bgcolor="#000000"><h4 style="color:#4fff33;" align="center";><font size="5"><a href="PhoneGraphsNonWorking.html" style="color:silver">Price <br/> on Ebay<br/>for parts</a></font></h4></td>
+        </tr></table></td>
+    </tr>
+</table>
 
 </html>
