--- a/Galaxy Note8.html
+++ b/Galaxy Note8.html
@@ -102,7 +102,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
 <td align="left" width="160" style="text-decoration:none; color: Silver;"> <h4>Launch</h4></td>
-<td align="left" width="740" style="text-decoration:none; color: Silver;"> <h4>Available. Released 2017, April</h4></td>
+<td align="left" width="740" style="text-decoration:none; color: Silver;"> <h4>Released 2017, September</h4></td>
 
 </tr>
 </tbody>
@@ -117,7 +117,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
 <td align="left" width="162" style="text-decoration:none; color: Silver;"> <h4>Dimensions</h4></td>
-<td align="left" width="1038" style="text-decoration:none; color: Silver;"> <h4>148.9 x 68.1 x 8 mm (5.86 x 2.68 x 0.31 in)</h4></td>
+<td align="left" width="1038" style="text-decoration:none; color: Silver;"> <h4>162.5 x 74.8 x 8.6 mm (6.40 x 2.94 x 0.34 in)</h4></td>
 
 </tr>
 </tbody>
@@ -132,7 +132,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
 <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Weight</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>155 g (5.47 oz)</h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>195 g (6.88 oz)</h4></td>
 </tr>
 </tbody>
 </table>
@@ -174,7 +174,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Resolution</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>1440 x 2960 pixels (~570 ppi pixel density)</h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>1440 x 2960 pixels, 18.5:9 ratio (~521 ppi density)</h4></td>
 </tr>
 </tbody>
 </table>
@@ -260,8 +260,8 @@ Octa-core (4x2.35 GHz Kryo & 4x1.9 GHz Kryo) - USA & China </h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>GPU</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> OMali-G71 MP20 - EMEA
-Adreno 540 - USA & China <br/>cta-core (4x2.3 GHz & 4x1.7 GHz) - EMEA </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> Mali-G71 MP20 - EMEA
+Adreno 540 - USA & China  </h4></td>
 </tr>
 </tbody>
 </table>
@@ -289,7 +289,7 @@ Adreno 540 - USA & China <br/>cta-core (4x2.3 GHz & 4x1.7 GHz) - EMEA </h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Memory</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> 64 GB, 4 GB RAM</h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> 64/128/256 GB, 6 GB RAM</h4></td>
 </tr>
 </tbody>
 </table>
@@ -302,7 +302,7 @@ Adreno 540 - USA & China <br/>cta-core (4x2.3 GHz & 4x1.7 GHz) - EMEA </h4></td>
 <TABLE width="1200">
 <TBODY align="center">
 <TR>
- <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Front camera</h4></td>
+ <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Rear camera</h4></td>
 <td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> 12 MP, f/1.7, 26mm, phase detection autofocus, OIS, LED flash</h4></td>
 </tr>
 </tbody>
@@ -344,7 +344,7 @@ Adreno 540 - USA & China <br/>cta-core (4x2.3 GHz & 4x1.7 GHz) - EMEA </h4></td>
 <TABLE width="1200">
 <TBODY align="center">
 <TR>
- <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Rear camera </h4></td>
+ <td align="left" width="165" style="text-decoration:none; color: Silver;"> <h4>Front camera </h4></td>
 <td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>8 MP, f/1.7, autofocus, 1440p@30fps, dual video call, Auto HDR</h4></td>
 </tr>
 </tbody>
@@ -513,9 +513,9 @@ Adreno 540 - USA & China <br/>cta-core (4x2.3 GHz & 4x1.7 GHz) - EMEA </h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Battery</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> Li-Ion 3000 mAh battery</h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> Li-Ion 3300 mAh battery</h4></td>
 </tr>
-</tbody>
+</tbody>3
 </table>
 <TABLE width="1200">
 <TBODY align="center">
