--- a/Iphone 8 PlusWorkingPrice.html
+++ b/Iphone 8 PlusWorkingPrice.html
@@ -23,9 +23,8 @@
 	<body style="background:url(DSC00086.JPG);background-repeat:no-repeat;background-size:100% 100%";>
 	<header>
 		<h1 style="font-size: 500%"; align="center">
-		Rear Camera
-		</header>
-		
+		Iphone 8+ Price <br/>on Ebay
+		 </h1>
 		<script>
 function openNav() {
     document.getElementById("sideNavigation").style.width = "100%";
@@ -63,7 +62,7 @@ function closeNav() {
  <a href="index.html">Home</a>
  </tr>
  </td>
- </tbody>/
+ </tbody>
  </table>
  </h4>
   
@@ -83,7 +82,13 @@ function closeNav() {
 <br/>
 <br/>
 <br/>
-<img src="PhoneFrontCamera.jpg" width="100%">
-
-
+<header>
+		<h1 style="font-size: 300%"; align="center">
+		10/12
+		</header>
+<img src="8.12WorkingIphoneEbayPrice.jpg" width="100%">
+<h1 style="font-size: 300%"; align="center">
+		10/11
+		</header>
+<img src="811priceonebay.jpg" width="100%">
 </html>
