--- a/LG V30 +ebays.html
+++ b/LG V30 +ebays.html
@@ -23,9 +23,8 @@
 	<body style="background:url(DSC00086.JPG);background-repeat:no-repeat;background-size:100% 100%";>
 	<header>
 		<h1 style="font-size: 500%"; align="center">
-		Rear Camera
-		</header>
-		
+		LG V30+ <br/>on Ebay
+		 </h1>
 		<script>
 function openNav() {
     document.getElementById("sideNavigation").style.width = "100%";
@@ -63,7 +62,7 @@ function closeNav() {
  <a href="index.html">Home</a>
  </tr>
  </td>
- </tbody>/
+ </tbody>
  </table>
  </h4>
   
@@ -83,7 +82,7 @@ function closeNav() {
 <br/>
 <br/>
 <br/>
-<img src="PhoneFrontCamera.jpg" width="100%">
 
+<img src="v30+baylif.jpg" width="100%">
 
 </html>
