--- a/PhoneGraphsNonWorking.html
+++ b/PhoneGraphsNonWorking.html
@@ -23,7 +23,7 @@
 	<body style="background:url(DSC00086.JPG);background-repeat:no-repeat;background-size:100% 100%";>
 	<header>
 		<h1 style="font-size: 500%"; align="center">
-		Rear Camera
+		Working phone ebay price
 		</header>
 		
 		<script>
@@ -37,7 +37,6 @@ function closeNav() {
     document.getElementById("main").style.marginLeft = "0";
 }
 </script>
-
 	<div id="sideNavigation" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 <h3>
@@ -83,7 +82,32 @@ function closeNav() {
 <br/>
 <br/>
 <br/>
-<img src="PhoneFrontCamera.jpg" width="100%">
+
+
+<TABLE  width="100%">
+<TBODY align="center">
+<TR width="100%">
+ <td width="50%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="Galaxy Note8notworking.html" style="color:silver">Galaxy Note8 </a> </font></h4></td><hr align="right" height="10px" width="1px">
+        </tr></table> </td>
+ 
+ 
+
+ <td width="50%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="NonWorkingIphone.html" style="color:silver"> Iphone 8 Plus</a></font></h4></td>
+        </tr></table></td>
+</tr>
+</tbody>
+</table>
+
+<hr style=" height: 2px;
+    border-style: ridge;
+    border-color: #900;
+    border-width: 1px 0 0 0;
+    border-radius: 45px;"
+ size="1" align="left" width="100%" color="grey">
 
 
 </html>
