--- a/PhoneRearCamera.html
+++ b/PhoneRearCamera.html
@@ -23,7 +23,7 @@
 	<body style="background:url(DSC00086.JPG);background-repeat:no-repeat;background-size:100% 100%";>
 	<header>
 		<h1 style="font-size: 500%"; align="center">
-		Rear Camera
+		Front Camera
 		</header>
 		
 		<script>
