--- a/Galaxy Note8.html
+++ b/Galaxy Note8.html
@@ -521,7 +521,7 @@ Adreno 540 - USA & China  </h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> $929.99 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">https://www.samsung.com/us/galaxy/note8/buy/</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4> $929.99 <br/> <a style="text-decoration:none; color: Silver;" href="https://www.samsung.com/us/galaxy/note8/buy/">https://www.samsung.com/us/galaxy/note8/buy/</a> </h4></td>
 </tr>
 </tbody>
 </table>
