--- a/HTC U Ultra.html
+++ b/HTC U Ultra.html
@@ -506,7 +506,7 @@ Sapphire crystal glass (128 GB version)</h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$499.00 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">http://www.htc.com/us/smartphones/htc-u-ultra/buy/#!color=black</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$499.00 <br/> <a style="text-decoration:none; color: Silver;" href="http://www.htc.com/us/smartphones/htc-u-ultra/buy/#!color=black">http://www.htc.com/us/smartphones/htc-u-ultra/buy/#!color=black</a> </h4></td>
 </tr>
 </tbody>
 </table>
