--- a/HTC U11.html
+++ b/HTC U11.html
@@ -505,7 +505,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$649<br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">http://www.htc.com/us/smartphones/htc-u11/buy/#!color=red</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$649<br/> <a style="text-decoration:none; color: Silver;" href="http://www.htc.com/us/smartphones/htc-u11/buy/#!color=red">http://www.htc.com/us/smartphones/htc-u11/buy/#!color=red</a> </h4></td>
 </tr>
 </tbody>
 </table>
