--- a/OnePlus 5.html
+++ b/OnePlus 5.html
@@ -507,7 +507,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$479, or $539 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">https://oneplus.net/oneplus-5</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$479, or $539 <br/> <a style="text-decoration:none; color: Silver;" href="https://oneplus.net/oneplus-5">https://oneplus.net/oneplus-5</a> </h4></td>
 </tr>
 </tbody>
 </table>
