--- a/Iphone X.html
+++ b/Iphone X.html
@@ -505,7 +505,7 @@ function closeNav() {
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$999 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">https://www.apple.com/shop/buy-iphone/iphone-x</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$999 <br/> <a style="text-decoration:none; color: Silver;" href="https://www.apple.com/shop/buy-iphone/iphone-x">https://www.apple.com/shop/buy-iphone/iphone-x</a> </h4></td>
 </tr>
 </tbody>
 </table>
