--- a/Kodak Ektra.html
+++ b/Kodak Ektra.html
@@ -470,7 +470,7 @@ LTE 2/4/5/7/12/17 (Cat 4)</h4></td>
 <TBODY align="center">
 <TR>
  <td align="left" width="165" style="text-decoration:none; color: Silver;"><h4>Price</h4></td>
-<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$399 <br/> <a style="text-decoration:none; color: Silver;" href="Contact.html">https://www.kodakphones.com/us/shop/kodak-ektra-smartphone-us/</a> </h4></td>
+<td align="left" width="1035" style="text-decoration:none; color: Silver;"> <h4>$399 <br/> <a style="text-decoration:none; color: Silver;" href="https://www.kodakphones.com/us/shop/kodak-ektra-smartphone-us/">https://www.kodakphones.com/us/shop/kodak-ektra-smartphone-us/</a> </h4></td>
 </tr>
 </tbody>
 </table>
